P3/master-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spark-master
  namespace: spark
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spark
  template:
    metadata:
      name: spark-master
      labels:
        app: spark
    spec: 
      containers:
      - name: spark-master
        image: pla/spark_master
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 7077
          containerPort: 8080
