P3/worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spark-worker
  namespace: spark
spec:
  replicas: 2
  selector:
    matchLabels:
      app: spark
  template:
    metadata:
      name: spark-worker
      labels:
        app: spark
    spec: 
      containers:
      - name: spark-worker
        image: pla/spark_worker
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 30707
