P3/master-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: spark-master
  namespace: spark
spec:
  type: NodePort
  ports:
  - name: webui
    port: 8080
    targetPort: 8080
  - name: spark
    port: 7077
    targetPort: 7077
    nodePort: 30707
