P3/master.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spark-master
  namespace: spark
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spark
  template:
    metadata:
      name: spark-master
      labels:
        app: spark
    spec: 
      containers:
      - name: spark-master
        image: pla/spark_master
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 7077
          containerPort: 8080
---
kind: Service
apiVersion: v1
metadata:
  name: spark-master
  namespace: spark
spec:
  type: NodePort
  ports:
  - name: webui
    port: 8080
    targetPort: 8080
  - name: spark
    port: 7077
    targetPort: 7077
    nodePort: 30707
  selector:
    app: spark-master
