P3/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  labels:
    name: myingress
spec:
  rules:
  - host: spark-kubernetes
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: spark-master
            port: 
              number: 8080
